--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d",
-  "version": "0.1.0",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,8 +14,10 @@
     "@types/three": "^0.176.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "valtio": "^2.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
